# AVIRClient

./: AVIRclient.c  AVIRclientdaemon.c  CMakeLists.txt  skeleton
